envoy/bootstrap-grpc-tio.yml
node:
  id: sn1
  cluster: sc1
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 10000 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                stat_prefix: downstream_cx_total
                codec_type: AUTO
                access_log:
                  name: envoy.file_access_log
                  config:
                    path: /dev/stdout
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      require_tls: NONE
                      routes:
                        - match:
                            prefix: "/MyService"
                          route: { cluster: my-grpc-svc_cluster }
                http_filters:
                  - name: envoy.grpc_web
                  - name: envoy.cors
                  - name: envoy.router
  clusters:
    - name: my-grpc-svc_cluster
      connect_timeout: 5s
      type: STATIC
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        cluster_name: my-grpc-svc_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 172.31.0.87
                      port_value: 80
#    - name: local_grpc_1
#      connect_timeout: 5s
#      type: STATIC
#      lb_policy: ROUND_ROBIN
#      http2_protocol_options: {}
#      load_assignment:
#        cluster_name: local_grpc
#        endpoints:
#          - lb_endpoints:
#              - endpoint:
#                  address:
#                    socket_address:
#                      address: 192.168.1.127
#                      port_value: 80
